# PER.Tracy

./: .gitignore  .gitmodules  PER.Tracy.sln  README.md
PER.Tracy/: PER.Tracy.csproj
PER.Tracy.Native/: CMakeLists.txt  PER.Tracy.Native.csproj
PER.Tracy.Native/src/: dllmain.cpp
PER.Tracy.Weaver/: PER.Tracy.Weaver.csproj
PER.Tracy.Weaver/src/: ProfiledWeaver.cs  RewriterFix.cs
PER.Tracy/src/: ProfiledAttribute.cs  ProfiledFabric.cs  Profiler.cs  ProfilerInternal.cs
